test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/test_attr.sw
library;

// Actually, we cannot test this here, because we need
// to compile in the test mode. Keep it for completeness
// of attributes.
#[test(should_revert = true)]
fn not_ok() { }